--- a/deno.json
+++ b/deno.json
@@ -1,6 +1,7 @@
 {
   "imports": {
-    "hono": "jsr:@hono/hono@^4.7.1"
+    "hono": "jsr:@hono/hono@^4.7.1",
+    "@eidos/core": "jsr:@eidos/core@^0.1.1"
   },
   "tasks": {
     "start": "deno run --allow-net --unstable-broadcast-channel --unstable-node-globals main.ts"
