--- a/deno.json
+++ b/deno.json
@@ -4,7 +4,9 @@
     "@eidos/core": "jsr:@eidos/core@^0.1.1"
   },
   "tasks": {
-    "start": "deno run --allow-net --unstable-broadcast-channel --unstable-node-globals main.ts"
+    "dev": "deno run --allow-net --unstable-broadcast-channel main.ts",
+    "build": "deno compile --allow-net --allow-env --allow-read --allow-ffi --unstable-broadcast-channel --output=eidos-publish main.ts",
+    "start": "./eidos-publish"
   },
   "compilerOptions": {
     "jsx": "precompile",
